--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,27 +8,11 @@
 
     <com.mapbox.mapboxsdk.maps.MapView
         android:id="@+id/mapView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        mapbox:mapbox_cameraTargetLat="55.944"
-        mapbox:mapbox_cameraTargetLng="-3.188396"
-        mapbox:mapbox_cameraZoom="15"
-        mapbox:mapbox_styleUrl="@string/mapbox_style_mapbox_streets" />
-
-
-    <!--<Button-->
-        <!--android:id="@+id/startButton"-->
-        <!--android:layout_width="0dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginBottom="24dp"-->
-        <!--android:layout_marginEnd="24dp"-->
-        <!--android:layout_marginStart="24dp"-->
-        <!--android:background="@color/mapboxGreyLight"-->
-        <!--android:enabled="false"-->
-        <!--android:text="@string/start_navigating"-->
-        <!--android:textColor="@color/mapboxWhite"-->
-        <!--mapbox:layout_constraintBottom_toBottomOf="parent"-->
-        <!--mapbox:layout_constraintEnd_toEndOf="parent"-->
-        <!--mapbox:layout_constraintStart_toStartOf="parent" />-->
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        mapbox:mapbox_cameraTargetLat="55.946233"
+        mapbox:mapbox_cameraTargetLng="-3.192473"
+        mapbox:mapbox_styleUrl="mapbox://styles/mapbox/streets-v10"
+        mapbox:mapbox_cameraZoom="12" />
 
 </android.support.constraint.ConstraintLayout>
