--- a/app/src/main/res/layout/activity_bank.xml
+++ b/app/src/main/res/layout/activity_bank.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray"
     tools:context=".BankActivity"
     tools:layout_editor_absoluteY="25dp">
 
@@ -11,13 +12,13 @@
         android:id="@+id/headingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/racing_sans_one"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/orbitron_medium"
         android:text="Welcome to Coinz Bank"
-        android:textColor="@android:color/black"
+        android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,13 +31,13 @@
         android:id="@+id/subheadingText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/racing_sans_one"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/orbitron"
         android:text="Today's Rates Are: "
-        android:textColor="@android:color/black"
+        android:textColor="@color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,9 +50,9 @@
         android:id="@+id/SHILText"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:fontFamily="casual"
+        android:fontFamily="@font/pt_mono"
         android:text="SHIL"
-        android:textColor="@color/blue"
+        android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/DOLRText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -62,9 +63,9 @@
         android:id="@+id/DOLRText"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
-        android:fontFamily="casual"
+        android:fontFamily="@font/pt_mono"
         android:text="DOLR"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/QUIDText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -75,9 +76,9 @@
         android:id="@+id/QUIDText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="casual"
+        android:fontFamily="@font/pt_mono"
         android:text="QUID"
-        android:textColor="@android:color/holo_orange_light"
+        android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/PENYText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -88,9 +89,9 @@
         android:id="@+id/PENYText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="casual"
+        android:fontFamily="@font/pt_mono"
         android:text="PENY"
-        android:textColor="@android:color/holo_red_dark"
+        android:textColor="@color/red"
         app:layout_constraintBottom_toTopOf="@+id/walletSpinner"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -99,16 +100,19 @@
 
 
     <Spinner
+        android:theme="@style/mySpinnerItemStyle"
         android:id="@+id/walletSpinner"
         android:layout_width="268dp"
         android:layout_height="56dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:background="@android:color/background_light"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/transparent"
         android:dropDownWidth="match_parent"
-        android:popupBackground="@android:color/white"
+        android:popupBackground="@color/gray"
+        android:textColor="@color/silver"
+        app:fontFamily="@font/pt_mono"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -118,14 +122,14 @@
 
     <Button
         android:id="@+id/transferBtn"
-        style="@style/Widget.AppCompat.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/racing_sans_one"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/pt_mono"
         android:text="Transfer"
+        app:backgroundTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/bankBtn"
         app:layout_constraintHorizontal_bias="0.5"
@@ -137,12 +141,13 @@
         android:id="@+id/bankBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:fontFamily="@font/racing_sans_one"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:fontFamily="@font/pt_mono"
         android:text="Bank"
+        app:backgroundTint="@android:color/holo_red_dark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -154,13 +159,14 @@
         android:id="@+id/tv_back_to_map"
         style="@style/viewCustom"
         android:layout_below="@id/btn_login"
-        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:clickable="true"
         android:focusable="true"
         android:fontFamily="sans-serif-smallcaps"
         android:gravity="center_horizontal"
         android:text="Back to Map"
+        android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
