--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,10 +13,10 @@
     <color name="fuchsia">#FF00FF</color>
     <color name="red">#FF0000</color>
     <color name="silver">#C0C0C0</color>
-    <color name="gray">#808080</color>
+    <color name="gray">#2c2c2c</color>
     <color name="olive">#808000</color>
     <color name="purple">#800080</color>
-    <color name="maroon">#800000</color>
+    <color name="maroon">#810303</color>
     <color name="aqua">#00FFFF</color>
     <color name="lime">#00FF00</color>
     <color name="teal">#008080</color>
