--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,7 +2,9 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/alegreya_sans_sc_thin</item>
-        <item>@font/bungee_shade</item>
+        <item>@font/orbitron</item>
+        <item>@font/orbitron_medium</item>
+        <item>@font/pt_mono</item>
         <item>@font/racing_sans_one</item>
     </array>
 </resources>
